--- a/package.json
+++ b/package.json
@@ -75,5 +75,8 @@
   "eslintConfig": {
     "extends": "@adonisjs/eslint-config/app"
   },
-  "prettier": "@adonisjs/prettier-config"
+  "prettier": "@adonisjs/prettier-config",
+  "volta": {
+    "node": "20.11.1"
+  }
 }
