--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@inertiajs/react": "^1.0.15",
     "@vinejs/vine": "^1.7.1",
     "edge.js": "^6.0.1",
+    "lucide-react": "^0.356.0",
     "luxon": "^3.4.4",
     "pg": "^8.11.3",
     "react": "^18.2.0",
@@ -77,6 +78,6 @@
   },
   "prettier": "@adonisjs/prettier-config",
   "volta": {
-    "node": "20.11.1"
+    "node": "21.5.0"
   }
 }
