--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@adonisjs/shield": "^8.1.1",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^3.0.0-7",
+    "@inertiajs/inertia": "^0.11.1",
     "@inertiajs/react": "^1.0.15",
     "@vinejs/vine": "^1.7.1",
     "edge.js": "^6.0.1",
