--- a/package.json
+++ b/package.json
@@ -67,11 +67,13 @@
     "@inertiajs/inertia": "^0.11.1",
     "@inertiajs/react": "^1.0.15",
     "@vinejs/vine": "^1.7.1",
+    "chart.js": "^4.4.2",
     "edge.js": "^6.0.1",
     "lucide-react": "^0.356.0",
     "luxon": "^3.4.4",
     "pg": "^8.11.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-color-palette": "^7.1.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.2.1"
